force-app/main/default/objects/Leave__c/Leave__c.object-meta.xml
<CustomObject>
    <label>Leave</label>
    <nameField>
        <displayFormat>Leave-{0000}</displayFormat>
        <label>Leave ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>