force-app/main/default/objects/Leave__c/fields/Day_Selection__c.field-meta.xml
<CustomField>
    <fullName>Day_Selection__c</fullName>
    <label>Day Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Day</fullName>
            </value>
            <value>
                <fullName>1st Half</fullName>
            </value>
            <value>
                <fullName>2nd Half</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>