force-app/main/default/objects/Leave__c/fields/Employee_Manager__c.field-meta.xml
<CustomField>
    <fullName>Employee_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leave</relationshipName>
    <type>Lookup</type>
</CustomField>