force-app/main/default/objects/Leave__c/fields/Lapsed__c.field-meta.xml
<CustomField>
    <fullName>Lapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lapsed</label>
    <type>Checkbox</type>
</CustomField>