force-app/main/default/objects/Leave__c/fields/No_of_day__c.field-meta.xml
<CustomField>
    <fullName>No_of_day__c</fullName>
    <formula>IF(ISBLANK(Start_Date__c) || ISBLANK(End_Date__c), 0,
IF(ISPICKVAL(Day_Selection__c, &quot;1st Half&quot;) || ISPICKVAL(Day_Selection__c, &quot;2nd Half&quot;), 0.5,
(End_Date__c - Start_Date__c + 1) -
(
FLOOR((End_Date__c - Start_Date__c + 1) / 7) * 2 +
IF(
MOD(End_Date__c - Start_Date__c + 1, 7) &gt;=
(8 - WEEKDAY(Start_Date__c)),
MIN(2, MOD(End_Date__c - Start_Date__c + 1, 7) - (7 - WEEKDAY(Start_Date__c)) + 1),
IF(WEEKDAY(Start_Date__c) = 1 || WEEKDAY(Start_Date__c) = 7, 1, 0) +
IF(
Start_Date__c != End_Date__c &amp;&amp;
(WEEKDAY(End_Date__c) = 1 || WEEKDAY(End_Date__c) = 7), 1, 0) ) ) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>