force-app/main/default/objects/Leave__c/validationRules/Employee_Manager_Is_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Manager_Is_Valid</fullName>
    <active>false</active>
    <errorConditionFormula>Employee_Manager__r.Id  &lt;&gt;  Employee_Name__r.Employee_Manager__r.Related_User__r.Id</errorConditionFormula>
    <errorMessage>Please Select the Current User</errorMessage>
</ValidationRule>