force-app/main/default/objects/Leave__c/validationRules/Half_Day_Leave_Same_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Half_Day_Leave_Same_Date</fullName>
    <active>true</active>
    <description>For Half Day selection, From Date and To Date must be the same</description>
    <errorConditionFormula>AND(
  OR(
    ISPICKVAL(Day_Selection__c, &quot;1st Half&quot;),
    ISPICKVAL(Day_Selection__c, &quot;2nd Half&quot;)
  ),
  NOT(ISBLANK( Start_Date__c )),
  NOT(ISBLANK( End_Date__c )),
   Start_Date__c  &lt;&gt;  End_Date__c 
)</errorConditionFormula>
    <errorMessage>For Half Day selection, From Date and To Date must be the same</errorMessage>
</ValidationRule>