force-app/main/default/objects/Leave__c/validationRules/Leave_End_Date_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_End_Date_After_Start</fullName>
    <active>false</active>
    <description>Please ensure Start Date and End Date are correct, and Day Selection is set to Full Day</description>
    <errorConditionFormula>OR(
  ISBLANK(Start_Date__c),
  ISBLANK(End_Date__c),
  Start_Date__c &gt; End_Date__c,

  AND(  ISBLANK( TEXT(Day_Selection__c) ),
  NOT(ISPICKVAL( Day_Selection__c , &quot;Full Day&quot;)))

)</errorConditionFormula>
    <errorMessage>Please ensure Start Date and End Date are correct, and Day Selection is set to Full Day</errorMessage>
</ValidationRule>