force-app/main/default/objects/Leave__c/validationRules/Prevent_Approval_to_Rejected.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Approval_to_Rejected</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Leave_Status__c),
OR(
TEXT(PRIORVALUE(Leave_Status__c)) = &quot;Approved&quot;,
TEXT(PRIORVALUE(Leave_Status__c)) = &quot;Rejected&quot;
)
)</errorConditionFormula>
    <errorMessage>You cannot change the status from Approved to Rejected or Rejected to Approval</errorMessage>
</ValidationRule>