force-app/main/default/objects/Leave__c/listViews/All_Pending_Leave_Records.listView-meta.xml
<ListView>
    <fullName>All_Pending_Leave_Records</fullName>
    <columns>NAME</columns>
    <columns>Leave_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Leave_Status__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Pending Leave Records</label>
</ListView>