force-app/main/default/objects/Leave__c/listViews/All_Rejected_Leave_Records.listView-meta.xml
<ListView>
    <fullName>All_Rejected_Leave_Records</fullName>
    <columns>Leave_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Leave_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Leave_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>My Records</value>
    </filters>
    <label>All Rejected Leave Records</label>
</ListView>