force-app/main/default/objects/Leave__c/listViews/HR_Manager_Queue_Leave.listView-meta.xml
<ListView>
    <fullName>HR_Manager_Queue_Leave</fullName>
    <filterScope>Queue</filterScope>
    <label>HR Manager Queue</label>
    <queue>HR_Manager_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>